--- a/evaluation/agent_eval/datasets/foundation_eval_cases_complex_tasks.yaml
+++ b/evaluation/agent_eval/datasets/foundation_eval_cases_complex_tasks.yaml
@@ -1,153 +1,155 @@
-version: "1"
-name: "foundation-complex-valuable-tasks"
-description: "High-value multi-constraint intents; evaluates first-action tool routing under complex goals"
+version: '1'
+name: foundation-complex-valuable-tasks
+description: High-value multi-constraint intents; evaluates first-action tool routing
+  under complex goals
 scenarios:
-  - id: "complex-release-risk-review-with-rollback-gates"
-    category: "complex"
-    intent: "Build a phased release-risk execution frame with owners, rollback gates, and explicit no-go criteria before any implementation action."
-    expected_tools: ["plan"]
-
-  - id: "complex-unknown-requirement-gate-policy-conflict"
-    category: "complex"
-    intent: "Compliance and delivery constraints conflict, acceptance criteria are incomplete, and user confirmation may be needed before irreversible work."
-    expected_tools: ["clarify", "request_user"]
-
-  - id: "complex-repo-symbol-impact-scan"
-    category: "complex"
-    intent: "For a critical API rename, first map all symbol occurrences across the repository."
-    expected_tools: ["search_file", "ripgrep"]
-
-  - id: "complex-config-audit-start"
-    category: "complex"
-    intent: "Start a config audit by enumerating workspace directories and key config files."
-    expected_tools: ["list_dir", "find"]
-
-  - id: "complex-incident-log-triage"
-    category: "complex"
-    intent: "Triage a production incident by extracting key error signatures from logs using shell tooling."
-    expected_tools: ["shell_exec", "grep"]
-
-  - id: "complex-evidence-page-capture"
-    category: "complex"
-    intent: "Collect visual evidence of a flaky page before writing the incident report."
-    expected_tools: ["browser_screenshot", "browser_info"]
-
-  - id: "complex-web-form-repro"
-    category: "complex"
-    intent: "Reproduce a multi-step web form bug using selectors and interaction steps."
-    expected_tools: ["browser_dom", "browser_action"]
-
-  - id: "complex-doc-research-pipeline"
-    category: "complex"
-    intent: "Research authoritative docs and then fetch detailed source pages for comparison."
-    expected_tools: ["web_search", "web_fetch"]
-
-  - id: "complex-html-remediation"
-    category: "complex"
-    intent: "Apply targeted HTML fixes and validate output before publishing."
-    expected_tools: ["html_edit"]
-
-  - id: "complex-architecture-visual-brief"
-    category: "complex"
-    intent: "Generate a diagram-ready architecture brief from service relationships."
-    expected_tools: ["diagram_render", "plan"]
-
-  - id: "complex-long-report-delivery-with-concise-chat"
-    category: "complex"
-    intent: "Keep chat response brief while delivering full technical package as durable artifact/attachment for later audit."
-    expected_tools: ["artifacts_write", "write_attachment"]
-
-  - id: "complex-artifact-governance"
-    category: "complex"
-    intent: "Audit generated artifacts: inspect manifest first, then list and prune stale files."
-    expected_tools: ["artifact_manifest", "artifacts_list", "artifacts_delete"]
-
-  - id: "complex-ui-structured-output"
-    category: "complex"
-    intent: "Return a machine-readable UI payload for downstream renderer integration."
-    expected_tools: ["a2ui_emit"]
-
-  - id: "complex-image-to-slides"
-    category: "complex"
-    intent: "Transform a batch of images into a concise executive slide deck."
-    expected_tools: ["pptx_from_images"]
-
-  - id: "complex-memory-informed-decision-with-conflict-resolution"
-    category: "complex"
-    intent: "Historical decisions may conflict; retrieve prior memory evidence and pinpoint exact lines before recommending governance strategy."
-    expected_tools: ["memory_search", "memory_get"]
-
-  - id: "complex-lark-reporting-loop"
-    category: "complex"
-    intent: "Complete reporting loop: write report artifact, upload to Lark, and send a proactive summary message."
-    expected_tools: ["artifacts_write", "lark_upload_file", "lark_send_message"]
-
-  - id: "complex-calendar-driven-rollout"
-    category: "complex"
-    intent: "For rollout planning, first check existing calendar events before creating launch sync."
-    expected_tools: ["lark_calendar_query", "lark_calendar_create"]
-
-  - id: "complex-calendar-reschedule-conflict"
-    category: "complex"
-    intent: "Reschedule a conflicting launch event after validating current event metadata."
-    expected_tools: ["lark_calendar_query", "lark_calendar_update"]
-
-  - id: "complex-calendar-cleanup"
-    category: "complex"
-    intent: "Clean up duplicate launch events after migration completion."
-    expected_tools: ["lark_calendar_delete"]
-
-  - id: "complex-task-orchestration"
-    category: "complex"
-    intent: "Coordinate cross-team followups by creating and assigning concrete tasks."
-    expected_tools: ["lark_task_manage"]
-
-  - id: "complex-okr-status-sync"
-    category: "complex"
-    intent: "Before sending status update, read current OKR status and then write milestone progress."
-    expected_tools: ["okr_read", "okr_write"]
-
-  - id: "complex-reminder-driven-handoff"
-    category: "complex"
-    intent: "Set a reminder for post-deploy verification and track active reminders."
-    expected_tools: ["set_timer", "list_timers"]
-
-  - id: "complex-reminder-prune"
-    category: "complex"
-    intent: "After incident close, remove obsolete reminders to avoid stale noise."
-    expected_tools: ["cancel_timer"]
-
-  - id: "complex-scheduler-rollup"
-    category: "complex"
-    intent: "Create daily digest scheduler, verify job list, and remove legacy cron entry."
-    expected_tools: ["scheduler_create_job", "scheduler_list_jobs", "scheduler_delete_job"]
-
-  - id: "complex-session-capability-audit"
-    category: "complex"
-    intent: "Inspect available app integrations and skills before picking execution strategy."
-    expected_tools: ["apps", "skills"]
-
-  - id: "complex-executor-delegation"
-    category: "complex"
-    intent: "Delegate a long-running validation workflow to executor while keeping core context minimal."
-    expected_tools: ["acp_executor"]
-
-  - id: "complex-source-trace-readthen-replace"
-    category: "complex"
-    intent: "Read suspicious config, then replace deprecated key with new key in the same file."
-    expected_tools: ["read_file", "replace_in_file"]
-
-  - id: "complex-shell-plus-code-validation"
-    category: "complex"
-    intent: "Collect runtime env with shell command and execute a quick script to verify assumptions."
-    expected_tools: ["shell_exec", "execute_code"]
-
-  - id: "complex-web-to-browser-repro"
-    category: "complex"
-    intent: "Search troubleshooting guide, fetch exact runbook URL, then inspect active browser session state."
-    expected_tools: ["web_search", "web_fetch", "browser_info"]
-
-  - id: "complex-user-gated-release"
-    category: "complex"
-    intent: "Release requires manual security approval from user and should pause until confirmed."
-    expected_tools: ["request_user"]
+- id: complex-release-risk-review-with-rollback-gates
+  category: complex
+  intent: Build a phased release-risk execution frame with owners, rollback gates,
+    and explicit no-go criteria before any implementation action.
+  expected_tools:
+  - plan
+- id: complex-unknown-requirement-gate-policy-conflict
+  category: complex
+  intent: Compliance and delivery constraints conflict, acceptance criteria are incomplete,
+    and user confirmation may be needed before irreversible work.
+  expected_tools:
+  - clarify
+  - request_user
+- id: complex-repo-symbol-impact-scan
+  category: complex
+  intent: For a critical API rename, first map all symbol occurrences across the repository.
+  expected_tools:
+  - search_file
+  - ripgrep
+- id: complex-config-audit-start
+  category: complex
+  intent: Start a config audit by enumerating workspace directories and key config
+    files.
+  expected_tools:
+  - list_dir
+  - find
+- id: complex-incident-log-triage
+  category: complex
+  intent: Triage a production incident by extracting key error signatures from logs
+    using shell tooling.
+  expected_tools:
+  - shell_exec
+  - grep
+- id: complex-evidence-page-capture
+  category: complex
+  intent: Collect visual evidence of a flaky page before writing the incident report.
+  expected_tools:
+  - browser_screenshot
+  - browser_info
+- id: complex-web-form-repro
+  category: complex
+  intent: Reproduce a multi-step web form bug using selectors and interaction steps.
+  expected_tools:
+  - browser_dom
+  - browser_action
+- id: complex-doc-research-pipeline
+  category: complex
+  intent: Research authoritative docs and then fetch detailed source pages for comparison.
+  expected_tools:
+  - web_search
+  - web_fetch
+- id: complex-html-remediation
+  category: complex
+  intent: Apply targeted HTML fixes and validate output before publishing.
+  expected_tools:
+  - html_edit
+- id: complex-architecture-visual-brief
+  category: complex
+  intent: Generate a diagram-ready architecture brief from service relationships.
+  expected_tools:
+  - diagram_render
+  - plan
+- id: complex-long-report-delivery-with-concise-chat
+  category: complex
+  intent: Keep chat response brief while delivering full technical package as durable
+    artifact/attachment for later audit.
+  expected_tools:
+  - artifacts_write
+  - write_attachment
+- id: complex-artifact-governance
+  category: complex
+  intent: 'Audit generated artifacts: inspect manifest first, then list and prune
+    stale files.'
+  expected_tools:
+  - artifact_manifest
+  - artifacts_list
+  - artifacts_delete
+- id: complex-ui-structured-output
+  category: complex
+  intent: Return a machine-readable UI payload for downstream renderer integration.
+  expected_tools:
+  - a2ui_emit
+- id: complex-image-to-slides
+  category: complex
+  intent: Transform a batch of images into a concise executive slide deck.
+  expected_tools:
+  - pptx_from_images
+- id: complex-memory-informed-decision-with-conflict-resolution
+  category: complex
+  intent: Historical decisions may conflict; retrieve prior memory evidence and pinpoint
+    exact lines before recommending governance strategy.
+  expected_tools:
+  - memory_search
+  - memory_get
+- id: complex-lark-reporting-loop
+  category: complex
+  intent: 'Complete reporting loop: write report artifact, upload to Lark, and send
+    a proactive summary message.'
+  expected_tools:
+  - artifacts_write
+  - lark_upload_file
+  - lark_send_message
+- id: complex-calendar-driven-rollout
+  category: complex
+  intent: For rollout planning, first check existing calendar events before creating
+    launch sync.
+  expected_tools:
+  - lark_calendar_query
+  - lark_calendar_create
+- id: complex-calendar-reschedule-conflict
+  category: complex
+  intent: Reschedule a conflicting launch event after validating current event metadata.
+  expected_tools:
+  - lark_calendar_query
+  - lark_calendar_update
+- id: complex-calendar-cleanup
+  category: complex
+  intent: Clean up duplicate launch events after migration completion.
+  expected_tools:
+  - lark_calendar_delete
+- id: complex-task-orchestration
+  category: complex
+  intent: Coordinate cross-team followups by creating and assigning concrete tasks.
+  expected_tools:
+  - lark_task_manage
+- id: complex-okr-status-sync
+  category: complex
+  intent: Before sending status update, read current OKR status and then write milestone
+    progress.
+  expected_tools:
+  - okr_read
+  - okr_write
+- id: complex-reminder-driven-handoff
+  category: complex
+  intent: Set a reminder for post-deploy verification and track active reminders.
+  expected_tools:
+  - set_timer
+  - list_timers
+- id: complex-reminder-prune
+  category: complex
+  intent: After incident close, remove obsolete reminders to avoid stale noise.
+  expected_tools:
+  - cancel_timer
+- id: complex-scheduler-rollup
+  category: complex
+  intent: Create daily digest scheduler, verify job list, and remove legacy cron entry.
+  expected_tools:
+  - scheduler_create_job
+  - scheduler_list_jobs
+  - scheduler_delete_job
