--- a/evaluation/agent_eval/datasets/foundation_eval_cases_intent_decomposition_constraint_matrix.yaml
+++ b/evaluation/agent_eval/datasets/foundation_eval_cases_intent_decomposition_constraint_matrix.yaml
@@ -1,177 +1,127 @@
-version: "1"
-name: "foundation-intent-decomposition-constraint-matrix"
-description: "Systematic examination matrix for intent decomposition across consent gating, planning boundaries, memory retrieval, channel-action selection, source selection, execution mode, scheduling semantics, and deliverable routing"
+version: '1'
+name: foundation-intent-decomposition-constraint-matrix
+description: Systematic examination matrix for intent decomposition across consent
+  gating, planning boundaries, memory retrieval, channel-action selection, source
+  selection, execution mode, scheduling semantics, and deliverable routing
 scenarios:
-  - id: "opt-hard-consent-before-external-task-sync"
-    category: "consent_gate_disambiguation"
-    intent: "Policy says no external coordination until user confirms; ask for approval before creating or assigning any task."
-    expected_tools: ["request_user"]
-
-  - id: "opt-hard-sensitive-context-confirm-gate"
-    category: "consent_gate_disambiguation"
-    intent: "Action depends on sensitive personal context and cannot proceed safely without explicit user confirmation."
-    expected_tools: ["request_user"]
-
-  - id: "opt-hard-plan-phase-vs-task-update"
-    category: "planning_vs_mutation_boundary"
-    intent: "Define phased rollout plan with milestones, rollback gates, and risk checkpoints before any task updates."
-    expected_tools: ["plan"]
-
-  - id: "opt-hard-plan-minimal-sequence"
-    category: "planning_vs_mutation_boundary"
-    intent: "Provide the smallest viable staged execution sequence with explicit checkpoints."
-    expected_tools: ["plan"]
-
-  - id: "opt-hard-memory-pattern-recall"
-    category: "memory_retrieval_disambiguation"
-    intent: "Recall prior successful remediation patterns from memory before selecting next operation."
-    expected_tools: ["memory_search"]
-
-  - id: "opt-hard-memory-preference-retrieval"
-    category: "memory_retrieval_disambiguation"
-    intent: "Retrieve remembered user preference and habit context before drafting follow-up."
-    expected_tools: ["memory_search"]
-
-  - id: "opt-hard-lark-message-no-attachment"
-    category: "message_vs_upload_channel_action"
-    intent: "Send a concise status update in Lark thread with no file upload or attachment."
-    expected_tools: ["lark_send_message"]
-
-  - id: "opt-hard-lark-context-read-before-reply"
-    category: "message_vs_upload_channel_action"
-    intent: "Read recent Lark chat history before sending any proactive response."
-    expected_tools: ["lark_chat_history"]
-
-  - id: "opt-hard-lark-upload-explicit-file-handoff"
-    category: "message_vs_upload_channel_action"
-    intent: "Upload the generated markdown package file into Lark thread for download handoff."
-    expected_tools: ["lark_upload_file"]
-
-  - id: "opt-hard-exact-url-fetch-not-discover"
-    category: "source_selection_disambiguation"
-    intent: "Source URL is fixed and known; fetch exact page content directly rather than searching."
-    expected_tools: ["web_fetch"]
-
-  - id: "opt-hard-authoritative-discovery-first"
-    category: "source_selection_disambiguation"
-    intent: "No source is selected yet; search authoritative official references and shortlist candidates."
-    expected_tools: ["web_search"]
-
-  - id: "opt-hard-shell-command-health-check"
-    category: "execution_mode_disambiguation"
-    intent: "Run shell commands to inspect running process state and occupied ports."
-    expected_tools: ["shell_exec"]
-
-  - id: "opt-hard-deterministic-computation-snippet"
-    category: "execution_mode_disambiguation"
-    intent: "Execute deterministic code snippet to compute validation metric and return score."
-    expected_tools: ["execute_code"]
-
-  - id: "opt-hard-find-path-name-before-open"
-    category: "repository_retrieval_disambiguation"
-    intent: "Find files by name and path pattern under nested directories before opening content."
-    expected_tools: ["find"]
-
-  - id: "opt-hard-ripgrep-fast-regex-repo-scan"
-    category: "repository_retrieval_disambiguation"
-    intent: "Use fast regex scan across repository to locate hot patterns quickly."
-    expected_tools: ["ripgrep"]
-
-  - id: "opt-hard-okr-read-before-write"
-    category: "state_read_before_write"
-    intent: "Read current OKR status first before deciding any progress update."
-    expected_tools: ["okr_read"]
-
-  - id: "opt-hard-scheduler-create-recurring-checkin"
-    category: "scheduling_semantics_disambiguation"
-    intent: "Create recurring weekday scheduler job for accountability check-ins."
-    expected_tools: ["scheduler_create_job"]
-
-  - id: "opt-hard-scheduler-delete-obsolete-job"
-    category: "scheduling_semantics_disambiguation"
-    intent: "Remove obsolete scheduler check-in job after cadence policy change."
-    expected_tools: ["scheduler_delete_job"]
-
-  - id: "opt-hard-artifact-progress-proof"
-    category: "deliverable_routing_disambiguation"
-    intent: "Persist durable progress report artifact for downstream review and reuse."
-    expected_tools: ["artifacts_write"]
-    deliverable:
-      output_description: "durable progress report artifact"
-      artifact_required: true
-      required_evidence: ["report"]
-      required_file_types: ["md"]
-
-  - id: "opt-hard-downloadable-summary-attachment"
-    category: "deliverable_routing_disambiguation"
-    intent: "Provide downloadable summary attachment for direct user handoff."
-    expected_tools: ["write_attachment"]
-    deliverable:
-      output_description: "downloadable summary attachment"
-      attachment_required: true
-      required_file_types: ["md"]
-
-  - id: "opt-hard-consent-private-memory-reuse-gate"
-    category: "consent_gate_disambiguation"
-    intent: "Private personal memory might be reused for outreach wording; do not proceed until the user explicitly confirms reuse scope."
-    expected_tools: ["request_user"]
-
-  - id: "opt-hard-plan-before-tracker-mutation"
-    category: "planning_vs_mutation_boundary"
-    intent: "A migration strategy with rollback checkpoints is required first; issue no tracker/task mutations yet."
-    expected_tools: ["plan"]
-
-  - id: "opt-hard-memory-get-selected-evidence-slice"
-    category: "memory_retrieval_disambiguation"
-    intent: "The relevant note was already selected earlier; open exact evidence lines for quote-level grounding."
-    expected_tools: ["memory_get"]
-
-  - id: "opt-hard-message-checkin-no-file-contract"
-    category: "message_vs_upload_channel_action"
-    intent: "Stakeholders only need a brief in-thread check-in right now; no file contract or upload is requested."
-    expected_tools: ["lark_send_message"]
-
-  - id: "opt-hard-chat-history-before-followup"
-    category: "message_vs_upload_channel_action"
-    intent: "Before drafting any follow-up, pull recent thread context to avoid repeating answered questions."
-    expected_tools: ["lark_chat_history"]
-
-  - id: "opt-hard-web-fetch-ticket-approved-link"
-    category: "source_selection_disambiguation"
-    intent: "Ticket already pins the canonical source link; ingest that approved page directly and skip discovery."
-    expected_tools: ["web_fetch"]
-
-  - id: "opt-hard-find-path-first-no-content-read"
-    category: "repository_retrieval_disambiguation"
-    intent: "In this monorepo step, narrow candidates by folder and filename pattern only; do not inspect file contents yet."
-    expected_tools: ["find"]
-
-  - id: "opt-hard-search-content-inside-files"
-    category: "repository_retrieval_disambiguation"
-    intent: "File names are noisy and misleading; locate the target by searching textual evidence inside files."
-    expected_tools: ["search_file"]
-
-  - id: "opt-hard-scheduler-list-before-change"
-    category: "scheduling_semantics_disambiguation"
-    intent: "Duplicate recurring jobs were reported, but mutation is frozen; inspect current schedule state first."
-    expected_tools: ["scheduler_list_jobs"]
-
-  - id: "opt-hard-scheduler-delete-legacy-cadence"
-    category: "scheduling_semantics_disambiguation"
-    intent: "The old recurring cadence was retired last sprint; remove that obsolete scheduled job."
-    expected_tools: ["scheduler_delete_job"]
-
-  - id: "opt-hard-artifact-longform-before-chat-brief"
-    category: "deliverable_routing_disambiguation"
-    intent: "Keep chat concise, but persist the full long-form outcome in durable storage for audit and reuse."
-    expected_tools: ["artifacts_write"]
-    deliverable:
-      output_description: "durable long-form artifact"
-      artifact_required: true
-      required_evidence: ["audit", "report"]
-      required_file_types: ["md"]
-
-  - id: "opt-hard-lark-upload-required-by-review-gate"
-    category: "deliverable_routing_disambiguation"
-    intent: "The review gate only opens after the generated package file appears in the Lark thread."
-    expected_tools: ["lark_upload_file"]
+- id: opt-hard-consent-before-external-task-sync
+  category: consent_gate_disambiguation
+  intent: Policy says no external coordination until user confirms; ask for approval
+    before creating or assigning any task.
+  expected_tools:
+  - request_user
+- id: opt-hard-sensitive-context-confirm-gate
+  category: consent_gate_disambiguation
+  intent: Action depends on sensitive personal context and cannot proceed safely without
+    explicit user confirmation.
+  expected_tools:
+  - request_user
+- id: opt-hard-plan-phase-vs-task-update
+  category: planning_vs_mutation_boundary
+  intent: Define phased rollout plan with milestones, rollback gates, and risk checkpoints
+    before any task updates.
+  expected_tools:
+  - plan
+- id: opt-hard-plan-minimal-sequence
+  category: planning_vs_mutation_boundary
+  intent: Provide the smallest viable staged execution sequence with explicit checkpoints.
+  expected_tools:
+  - plan
+- id: opt-hard-memory-pattern-recall
+  category: memory_retrieval_disambiguation
+  intent: Recall prior successful remediation patterns from memory before selecting
+    next operation.
+  expected_tools:
+  - memory_search
+- id: opt-hard-memory-preference-retrieval
+  category: memory_retrieval_disambiguation
+  intent: Retrieve remembered user preference and habit context before drafting follow-up.
+  expected_tools:
+  - memory_search
+- id: opt-hard-lark-message-no-attachment
+  category: message_vs_upload_channel_action
+  intent: Send a concise status update in Lark thread with no file upload or attachment.
+  expected_tools:
+  - lark_send_message
+- id: opt-hard-lark-context-read-before-reply
+  category: message_vs_upload_channel_action
+  intent: Read recent Lark chat history before sending any proactive response.
+  expected_tools:
+  - lark_chat_history
+- id: opt-hard-lark-upload-explicit-file-handoff
+  category: message_vs_upload_channel_action
+  intent: Upload the generated markdown package file into Lark thread for download
+    handoff.
+  expected_tools:
+  - lark_upload_file
+- id: opt-hard-exact-url-fetch-not-discover
+  category: source_selection_disambiguation
+  intent: Source URL is fixed and known; fetch exact page content directly rather
+    than searching.
+  expected_tools:
+  - web_fetch
+- id: opt-hard-authoritative-discovery-first
+  category: source_selection_disambiguation
+  intent: No source is selected yet; search authoritative official references and
+    shortlist candidates.
+  expected_tools:
+  - web_search
+- id: opt-hard-shell-command-health-check
+  category: execution_mode_disambiguation
+  intent: Run shell commands to inspect running process state and occupied ports.
+  expected_tools:
+  - shell_exec
+- id: opt-hard-deterministic-computation-snippet
+  category: execution_mode_disambiguation
+  intent: Execute deterministic code snippet to compute validation metric and return
+    score.
+  expected_tools:
+  - execute_code
+- id: opt-hard-find-path-name-before-open
+  category: repository_retrieval_disambiguation
+  intent: Find files by name and path pattern under nested directories before opening
+    content.
+  expected_tools:
+  - find
+- id: opt-hard-ripgrep-fast-regex-repo-scan
+  category: repository_retrieval_disambiguation
+  intent: Use fast regex scan across repository to locate hot patterns quickly.
+  expected_tools:
+  - ripgrep
+- id: opt-hard-okr-read-before-write
+  category: state_read_before_write
+  intent: Read current OKR status first before deciding any progress update.
+  expected_tools:
+  - okr_read
+- id: opt-hard-scheduler-create-recurring-checkin
+  category: scheduling_semantics_disambiguation
+  intent: Create recurring weekday scheduler job for accountability check-ins.
+  expected_tools:
+  - scheduler_create_job
+- id: opt-hard-scheduler-delete-obsolete-job
+  category: scheduling_semantics_disambiguation
+  intent: Remove obsolete scheduler check-in job after cadence policy change.
+  expected_tools:
+  - scheduler_delete_job
+- id: opt-hard-artifact-progress-proof
+  category: deliverable_routing_disambiguation
+  intent: Persist durable progress report artifact for downstream review and reuse.
+  expected_tools:
+  - artifacts_write
+  deliverable:
+    output_description: durable progress report artifact
+    artifact_required: true
+    required_evidence:
+    - report
+    required_file_types:
+    - md
+- id: opt-hard-downloadable-summary-attachment
+  category: deliverable_routing_disambiguation
+  intent: Provide downloadable summary attachment for direct user handoff.
+  expected_tools:
+  - write_attachment
+  deliverable:
+    output_description: downloadable summary attachment
+    attachment_required: true
+    required_file_types:
+    - md
